--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -238,6 +238,7 @@
         [view]="view"
         [scheme]="colorScheme"
         [results]="single"
+        [valueFormatting]="valueFormatting"
         [animations]="animations"
         (legendLabelClick)="onLegendLabelClick($event)"
         [gradient]="gradient"
