--- a/src/app/custom-charts/combo-chart/combo-chart.component.html
+++ b/src/app/custom-charts/combo-chart/combo-chart.component.html
@@ -52,7 +52,7 @@
       [seriesLine]="lineChart"
       [dims]="dims"
       [gradient]="gradient"
-      tooltipDisabled="true"
+      [tooltipDisabled]="true"
       [activeEntries]="activeEntries"
       [animations]="animations"
       [noBarWhenZero]="noBarWhenZero"
